# check-repo-settings-action

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  README.md  action.yml  default-repository-settings.yaml  main.py  pyproject.toml  sample-repository-settings.yaml
.github/: dependabot.yml
.github/workflows/: test_action.yml  workflow.yaml
