[tool.poetry]
name = "check-repo-settings-action"
version = "1.1.5"
description = "Check/validate repository settings"
authors = ["Kerry Johnson <kerry.t.johnson@gmail.com>"]
readme = "README.md"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version = "1.1.5"
version_files = [
    "pyproject.toml:^version"
]

[tool.poetry.dependencies]
python = "^3.11"
PyYAML = "^6.0"
requests = "^2.28.2"
rich = "^13.3.1"

[tool.poetry.group.dev.dependencies]
commitizen = "^2.40.0"
pylint = "^2.17.2"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
